Update all translations from my repository Close all pending l10n bugs in the BTS

--- a/po/nb.po
+++ b/po/nb.po
@@ -6,10 +6,10 @@
 # Hans Fredrik Nordhaug <hans@nordhaug.priv.no>, 2005.
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg\n"
+"Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
-"POT-Creation-Date: 2005-08-17 04:46+0100\n"
-"PO-Revision-Date: 2005-01-25 11:14+0100\n"
+"POT-Creation-Date: 2005-10-11 22:24+0200\n"
+"PO-Revision-Date: 2005-08-22 15:47+0100\n"
 "Last-Translator: Hans Fredrik Nordhaug <hans@nordhaug.priv.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.ui.no>\n"
 "MIME-Version: 1.0\n"
@@ -239,7 +239,7 @@ msgstr "klarte ikke installere oppdatert status for «%.250s»"
 #: lib/dbmodify.c:301
 #, fuzzy, c-format
 msgid "couldn't open log `%s': %s\n"
-msgstr "klarte ikke åpne avlusingsfil `%.255s'\n"
+msgstr "klarte ikke åpne logg «%s»"
 
 #: lib/dump.c:291
 #, c-format
@@ -947,9 +947,9 @@ msgid "Replacing files in old package %s ...\n"
 msgstr "Bytter ut filer i den gamle pakken %s ...\n"
 
 #: src/archives.c:470
-#, fuzzy, c-format
+#, c-format
 msgid "Replaced by files in installed package %s ...\n"
-msgstr "Bytter ut filer i den gamle pakken %s ...\n"
+msgstr "Byttet ut med filer i den installerte pakken %s ...\n"
 
 #: src/archives.c:476
 #, c-format
@@ -965,9 +965,9 @@ msgid "trying to overwrite `%.250s', which is also in package %.250s"
 msgstr "prøver å skrive over «%.250s», som også finnes i pakken %.250s"
 
 #: src/archives.c:511
-#, fuzzy, c-format
+#, c-format
 msgid "gobble replaced file `%.255s'"
-msgstr "klarte ikke lese delfila «%.250s»"
+msgstr "gobble byttet ut fil «%.255s»"
 
 #: src/archives.c:568 dpkg-deb/build.c:314
 #, c-format
@@ -2122,7 +2122,7 @@ msgstr "Debian GNU/Linux «"
 msgid "' package management program version "
 msgstr "» pakkehåndteringsprogram, versjon "
 
-#: src/main.c:48 src/query.c:463
+#: src/main.c:48 src/query.c:462
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or\n"
 "later for copying conditions.  There is NO warranty.\n"
@@ -2132,12 +2132,12 @@ msgstr ""
 "nyere for kopieringsvilkår. Det finnes INGEN garanti.\n"
 "Se"
 
-#: src/main.c:50 src/query.c:465
+#: src/main.c:50 src/query.c:464
 msgid " --licence for copyright and license details.\n"
 msgstr " --licence for informasjon om opphavsrett og lisens.\n"
 
 #: src/main.c:58
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Usage: \n"
 "  dpkg -i|--install      <.deb file name> ... | -R|--recursive <dir> ...\n"
@@ -2228,11 +2228,7 @@ msgstr ""
 "fila (r)\n"
 "  dpkg -C|--audit                          sjekk for ødelagte pakker\n"
 "  dpkg --print-architecture                vis målarkitektur (bruker GCC)\n"
-"  dpkg --print-gnu-build-architecture      vis GNU-versjon for "
-"målarkitektur\n"
-"  dpkg --print-installation-architecture   vis vertsarkitektur (for "
-"installering)\n"
-"  dpkg --compare-versions <a> <udg> <b>    sammenlikne versjonsnummer, se "
+"  dpkg --compare-versions <a> <rel> <b>    sammenlikne versjonsnummer, se "
 "nedenfor\n"
 "  dpkg --help | --version                  vis denne hjelpa / "
 "versjonsnummer\n"
@@ -2261,11 +2257,14 @@ msgstr ""
 "  -B|--auto-deconfigure      Installer selv om det kommer til å ødelegge "
 "andre pakker\n"
 "  --no-debsig                Ikke prøv å bekrefte pakkesignaturer\n"
-"  --no-act                   Vis bare det som kommer til å skje - uten å "
-"gjøre det\n"
+"  --no-act|--dry-run|--simulate\n"
+"                                   Vis bare det som kommer til å skje - uten "
+"å gjøre det\n"
 "  -D|--debug=<oktal>         Slå på avlusing - se -Dhelp eller --debug=help\n"
 "  --status-fd <n>            Send statusendringsoppdateringer til "
 "fildeskriptor <n>\n"
+"  --log=<filnavn>            Logg statusendringer og handlinger til "
+"<filnavn>\n"
 "  --ignore-depends=<pakke>,...   Ignorer pakkekrav med pakken <pakke>\n"
 "  --force-...                    Tving gjennom operasjon - se --force-help\n"
 "  --no-force-...|--refuse-...    Stopp når problem oppstår\n"
@@ -2279,10 +2278,10 @@ msgstr ""
 " < << <= = >= >> >       (bare for kompatibilitet med syntaksen i "
 "kontrollfila).\n"
 "\n"
-"Bruk «dselect» for en litt mer brukervennlig pakkehåndtering.\n"
+"Bruk «dselect» eller «aptitude»for en litt mer brukervennlig "
+"pakkehåndtering.\n"
 
 #: src/main.c:119
-#, fuzzy
 msgid ""
 "Type dpkg --help for help about installing and deinstalling packages [*];\n"
 "Use `dselect' or `aptitude' for user-friendly package management;\n"
@@ -2296,7 +2295,8 @@ msgid ""
 "`more' !"
 msgstr ""
 "«dpkg --help» viser hjelp om installasjon og avinstallasjon av pakker [*];\n"
-"Bruk «dselect» for en litt mer brukervennlig pakkehåndtering;\n"
+"Bruk «dselect» eller «aptitude» for en litt mer brukervennlig "
+"pakkehåndtering;\n"
 "Skriv «dpkg -Dhelp» for en liste over avlusingsfunksjonene til dpkg;\n"
 "Skriv «dpkg --force-help» for info om hvordan operasjoner kan tvinges "
 "gjennom;\n"
@@ -2307,7 +2307,7 @@ msgstr ""
 "Valg markert med [*] gir mye tekst - bruk «less» eller «more» for å lese "
 "informasjonen!"
 
-#: src/main.c:184 src/query.c:531 dpkg-deb/main.c:162 dpkg-split/main.c:145
+#: src/main.c:184 src/query.c:530 dpkg-deb/main.c:162 dpkg-split/main.c:145
 #, c-format
 msgid "conflicting actions --%s and --%s"
 msgstr "handlinger i konflikt --%s og --%s"
@@ -2492,7 +2492,7 @@ msgstr "klarte ikke åpne «%i» for strøm"
 msgid "unexpected eof before end of line %d"
 msgstr "uventet slutt på fil før slutten av linje %d"
 
-#: src/main.c:541 src/main.c:556 src/query.c:566 dpkg-deb/main.c:184
+#: src/main.c:541 src/main.c:556 src/query.c:565 dpkg-deb/main.c:184
 #: dpkg-split/main.c:157
 msgid "need an action option"
 msgstr "trenger et handlingsvalg"
@@ -2714,7 +2714,7 @@ msgstr "dpkg-deb: Fjern eventuelle avsluttande nuller"
 msgid "dpkg: warning - unable to delete old file `%.250s': %s\n"
 msgstr "dpkg: Advarsel - klarte ikke slette den gamle fila «%.250s»: %s\n"
 
-#: src/processarc.c:689 src/processarc.c:929 src/remove.c:286
+#: src/processarc.c:689 src/processarc.c:926 src/remove.c:286
 msgid "cannot read info directory"
 msgstr "klarte ikke lese infokatalogen"
 
@@ -2765,12 +2765,12 @@ msgstr "dpkg: Advarsel - pakken %s inneholder en liste som informasjonsfil"
 msgid "unable to install new info file `%.250s' as `%.250s'"
 msgstr "klarte ikke installere ny informasjonsfil «%.250s» som «%.250s»"
 
-#: src/processarc.c:909
+#: src/processarc.c:906
 #, c-format
 msgid "(Noting disappearance of %s, which has been completely replaced.)\n"
 msgstr "(Legg merke til at %s er forsvunnet, og fullstendig erstattet.)\n"
 
-#: src/processarc.c:945
+#: src/processarc.c:942
 #, c-format
 msgid "unable to delete disappearing control info file `%.250s'"
 msgstr "klarte ikke slette den forsvinnende kontrollinformasjonsfila «%.250s»"
@@ -2799,7 +2799,7 @@ msgstr "Versjon"
 msgid "Description"
 msgstr "Beskrivelse"
 
-#: src/query.c:218 src/query.c:447 src/select.c:80
+#: src/query.c:218 src/query.c:446 src/select.c:80
 #, c-format
 msgid "No packages found matching %s.\n"
 msgstr "Fant ingen pakker som passer til «%s».\n"
@@ -2872,7 +2872,7 @@ msgstr "omdirigert av %s"
 msgid " to: %s\n"
 msgstr " til: %s\n"
 
-#: src/query.c:398
+#: src/query.c:397
 msgid ""
 "Use dpkg --info (= dpkg-deb --info) to examine archive files,\n"
 "and dpkg --contents (= dpkg-deb --contents) to list their contents.\n"
@@ -2880,21 +2880,21 @@ msgstr ""
 "Bruk dpkg --info (= dpkg-deb --info) for å undersøke arkivfiler,\n"
 "og dpkg --contents (= dpkg-deb --contents) for å vise innholdet i dem.\n"
 
-#: src/query.c:459 dpkg-deb/main.c:46
+#: src/query.c:458 dpkg-deb/main.c:46
 msgid "Debian `"
 msgstr "Debian «"
 
-#: src/query.c:461
+#: src/query.c:460
 msgid "' package management program query tool\n"
 msgstr "» pakkehåndteringsprogram og spørreverktøy\n"
 
-#: src/query.c:473
+#: src/query.c:472
 #, c-format
 msgid "Usage: "
 msgstr "Bruk: "
 
-#: src/query.c:474
-#, fuzzy, c-format
+#: src/query.c:473
+#, c-format
 msgid ""
 " [<option>] <command>\n"
 "Commands:\n"
@@ -2931,23 +2931,22 @@ msgstr ""
 "  -S|--search <mønster> ...           finn pakker som eier fil(er)\n"
 "  --help | --version                  viser denne hjelpen / "
 "versjonsnummeret\n"
-"  --licence                           viser lisensvilkåra\n"
+"  --licence                           viser lisensvilkårene\n"
 "\n"
 "Alternativ:\n"
-"  --admindir=<katalog>       Bruk <katalog> i staden for %s\n"
+"  --admindir=<katalog>       Bruk <katalog> i steden for %s\n"
 "  --showformat=<format>      Bruk alternativt format for --show\n"
 "\n"
 "Formatsyntaks:\n"
-"  Eit format er den strengen som vert brukt for å visa ein pakke. Formatet\n"
-"  kan innehalda dei vanlege escape-sekvensane \\n (linjeskift), \\r "
+"  Et format er den strengen som blir brukt for å vise en pakke. Formatet\n"
+"  kan inneholde de vanlige escape-sekvensene \\n (linjeskift), \\r "
 "(vognretur)\n"
-"  eller \\\\ (rein omvendt skråstrek). Pakkeopplysningar kan setjast inn "
-"ved\n"
-"  å setja inn variabelreferansar til pakkefelt med syntaksen\n"
-"  ${var[;breidd]}. Felta vil være høgrejusterte, med mindre breidda er \n"
-"negativ. I så fall vil dei være venstrejusterte.\n"
+"  eller \\\\ (ren omvendt skråstrek). Pakkeopplysninger kan tas med ved\n"
+"  å sette inn variabelreferanser til pakkefelt med syntaksen\n"
+"  ${var[;bredde]}. Feltene vil være høyrejusterte, med mindre bredden er \n"
+"negativ. I så fall vil de være venstrejusterte.\n"
 
-#: src/query.c:501
+#: src/query.c:500
 msgid ""
 "Use --help for help about querying packages;\n"
 "Use --licence for copyright licence and lack of warranty (GNU GPL).\n"
@@ -5355,7 +5354,6 @@ msgstr ""
 "Se «dpkg-deb --licence» for detaljer.\n"
 
 #: dpkg-deb/main.c:58
-#, fuzzy
 msgid ""
 "Command:\n"
 "  -b|--build <directory> [<deb>]    build an archive.\n"
@@ -5430,12 +5428,12 @@ msgstr ""
 "  inneholde de vanlige kontrollsekvensene \\n (linjeskift), \\r (vognretur)\n"
 "  eller \\\\ (bakoverskråstrek). Pakkeopplysninger kan tas med ved\n"
 "  å sette inn variabelreferanser til pakkefelt med syntaksen\n"
-"  ${var[;breidd]}. Feltene vil være høyrejusterte med mindre bredden er\n"
+"  ${var[;bredde]}. Feltene vil være høyrejusterte med mindre bredden er\n"
 "negativ. I så fall vil de være venstrejusterte.\n"
 "\n"
 "Bruk «dpkg» til å installere og fjerne pakker fra systemet, eller\n"
-"«dselect» for brukervennlig pakkehåndtering. Pakker som er pakket ut\n"
-"med «dpkg-deb --extract» vil ikke bli installert riktig.\n"
+"«dselect» eller «aptitude» for brukervennlig pakkehåndtering. Pakker\n"
+"som er pakket ut med «dpkg-deb --extract» vil ikke bli installert riktig.\n"
 
 #: dpkg-deb/main.c:100
 msgid ""
@@ -5796,29 +5794,29 @@ msgstr "(i alt %lu byte)\n"
 #: dpkg-split/queue.c:256
 #, c-format
 msgid "unable to discard `%.250s'"
-msgstr "klarte ikke sletta «%.250s»"
+msgstr "klarte ikke slette «%.250s»"
 
 #: dpkg-split/queue.c:257
 #, c-format
 msgid "Deleted %s.\n"
-msgstr "Sletta %s.\n"
+msgstr "Slettet %s.\n"
 
 #: dpkg-split/split.c:45
 msgid "--split needs a source filename argument"
-msgstr "--split krev ei kjeldefil som parameter"
+msgstr "--split krever et kildefilnavn som parameter"
 
 #: dpkg-split/split.c:48
 msgid "--split takes at most a source filename and destination prefix"
-msgstr "--split tek høgst eitt kjeldefilnamn og målprefiks"
+msgstr "--split tar høyst ett kildefilnavn og målprefiks"
 
 #: dpkg-split/split.c:62
 #, c-format
 msgid "unable to open source file `%.250s'"
-msgstr "klarte ikke åpne kjeldefila «%.250s»"
+msgstr "klarte ikke åpne kildefila «%.250s»"
 
 #: dpkg-split/split.c:63
 msgid "unable to fstat source file"
-msgstr "klarte ikke kjøre «fstat» på kjeldefila"
+msgstr "klarte ikke kjøre «fstat» på kildefila"
 
 #: dpkg-split/split.c:64
 #, c-format
