--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,16 @@ dpkg (1.13.12~) unstable; urgency=low
   * Let dpkg-source -b warn about special permissions of files added
     in the diff since these will get lost. Closes: #306125
 
+  [Christian Perrier]
+  * General resync of all translations with my archive.
+    Closes: #344671, #325990, #344513, #344646, #332872, #314237
+    Closes: #315253, #315461, #315548, #315987, #315990, #323642
+    Closes: #323662, #323674, #323775, #323779, #323821, #323908
+    Closes: #323938, #323964, #324114, #324456, #325224, #325687
+    Closes: #330021, #332698, #334063, #335170, #337164, #337307
+    Closes: #337948, #338268, #338904, #340674, #342089, #344058
+    Closes: #345347, #347225, #348575
+
  --
 
 dpkg (1.13.11.1) unstable; urgency=low
