--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,160 @@
-2005-06-19  Claus Hindsgaul  <claus_h@image.d>
+2006-01-18 Claus Hindsgaul  <claus_h@image.dk>
+
+	* da.po: updated to 1000t. Closes: #348575
+
+2006-01-12 Jacobo Tarrio  <jtarrio@trasno.net>
+
+	* gl.po: completed to 1000t. Closes: #338904
+
+2006-01-09 Stefano Melchior  <stefano.melchior@openlabs.it>
+
+	* it.po: minor correction.
+
+2005-12-31 Miroslav Kure  <kurem@upcase.inf.upol.cz>
+
+	* cs.po: updated to 1000t
+
+2005-12-25 Stefano Canepa  <sc@linux.it>
+
+	* it.po: updated to 1000t
+
+2005-12-25 Emmanuel Galatoulas
+
+	* el.po: updated to 1000t
+
+2005-12-23 Parlin Imanuel  <pt@samip-online.com>
+
+	* id.po: updated to 1000t
+
+2005-12-23 Clytie Siddall  <clytie@riverland.net.au>
+
+	* vi.po: updated to 992t8f
+
+2005-12-22 Eddy Petrisor  <eddy.petrisor@gmail.com>
+
+	* ro.po: updated to 998t2f
+
+2005-12-22 Jacobo Tarrio  <jtarrio@trasno.net>
+
+	* gl.po: updated to 718t79f203u (no translation for dselect)
+
+2005-12-22 Kov Tchai  <tchaikov@sjtu.edu.cn>
+
+	* zh_CN.po: updated to 999t1f
+
+2005-12-22 eric pareja  <xenos@upm.edu.ph>
+
+	* tl.po: updated to 1000t
+
+2005-12-22 pi  <pi@beobide.net>
+
+	* eu.po: updated to 1000t
+
+2005-12-22 Jordi Mallach  <jordi@debian.org>
+
+	* ca.po: updated to 998t2f
+
+2005-12-22 Stefano Canepa  <sc@linux.it>
+
+	* it.po: updated to 998t2f
+
+2005-12-22 Michael Piefel  <piefel@debian.org>
+
+	* de.po: updated to 998t2f
+
+2005-12-22 bart Cornelis   <cobaco@linux.be>
+
+	* nl.po: updated to 998t2f
+
+2005-12-22 Claus Hindsgaul  <claus_h@image.dk>
+
+	* da.po: updated to 1000t
+
+2005-12-22 Javier Fernández-Sanguino Peña  <jfs@computer.org>
+
+	* es.po: updated to 998t2f
+
+2005-12-22 Håvard Korsvoll  <korsvoll@skulelinux.no>
+
+	* nn.po: updated to 999t1f
+
+2005-12-22 Miguel Figueiredo  <elmig@debianpt.org>
+
+	* pt.po: updated to 974t24f2u
+
+2005-12-22 Peter Karlsson  <peter@softwolves.pp.se>
+
+	* sv.po: updated to 1000t
+
+2005-10-22 Christian Perrier  <bubulle@debian.org>
+
+	* *.po: merged with dpkg.pot
+
+2005-10-22 Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: completed
+
+2005-10-22 Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: completed
+
+2005-10-22 Christian Perrier  <bubulle@debian.org>
+
+	* dpkg.pot: re-generated from sources
+
+2005-10-11 Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: completed
+
+2005-10-11 Christian Perrier  <bubulle@debian.org>
+
+	* *.po: updated from sources
+
+2005-09-01 James Troup  <james@nocrew.org>
+
+	* pt_BR.po: obvious error corrected thanks to James deep knowledge of Portuguese
+
+2005-09-01 Christian Perrier  <bubulle@debian.org>
+
+	* *.po: Project-Id-Version forced to "dpkg 1.13"
+
+2005-08-26 Andre Luis Lopes  <andrelop@debian.org>
+
+	* pt_BR.po: Updated (999t)
+
+2005-08-22 Kenshi Muto  <kmuto@debian.org>
+
+	* ja.po: Updated (999t)
+
+2005-08-22 Yuri Kozlov  <yuray@id.ru>
+
+	* ru.po: Updated (999t)
+
+2005-08-22  Miroslav Kure  <kurem@upcase.inf.upol.cz>
+
+	* cs.po: Updated (999t)
+
+2005-08-22  Hans Fredrik Nordhaug  <hans@nordhaug.priv.no>
+
+	* nb.po: Updated (999t)
+
+2005-08-22  Bartosz Fenski  <fenio@debian.org>
+
+	* pl.po: Updated (999t)
+
+2005-08-19  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Completed (999t)
+
+2005-08-17  Christian Perrier  <bubulle@debian.org>
+
+	* *.po: Updated with the dpkg.pot file
+
+2005-07-06  Parlin Imanuel  <parlin_i@yahoo.com>
+
+	* id.po: Updated
+
+2005-06-19  Claus Hindsgaul  <claus_h@image.dk>
 
 	* da.po: Completed
 
