--- a/po/nn.po
+++ b/po/nn.po
@@ -1,3 +1,4 @@
+# translation of debconf_nn.po to Norwegian nynorsk
 # translation of dpkg_nn.po to Norwegian (Nynorsk)
 # translation of nn.po to Norwegian nynorsk
 # translation of dpkg.po to Norwegian nynorsk
@@ -7,16 +8,16 @@
 # Håvard Korsvoll <korsvoll@skulelinux.no>, 2003, 2004, 2005.
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg_nn\n"
+"Project-Id-Version: debconf_nn\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
-"POT-Creation-Date: 2005-08-17 04:46+0100\n"
-"PO-Revision-Date: 2005-01-08 16:16+0100\n"
+"POT-Creation-Date: 2005-10-22 18:33+0200\n"
+"PO-Revision-Date: 2005-06-27 21:34+0200\n"
 "Last-Translator: Håvard Korsvoll <korsvoll@skulelinux.no>\n"
-"Language-Team: Norwegian (Nynorsk) <i18n-nn@lister.ping.uio.no>\n"
+"Language-Team: Norwegian nynorsk <i18n-nn@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9.1\n"
+"X-Generator: KBabel 1.10\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: lib/compat.c:46
@@ -239,9 +240,9 @@ msgid "unable to install updated status of `%.250s'"
 msgstr "klarte ikkje installera oppdatert status for «%.250s»"
 
 #: lib/dbmodify.c:301
-#, fuzzy, c-format
+#, c-format
 msgid "couldn't open log `%s': %s\n"
-msgstr "klarte ikkje opna avlusingsfil `%.255s'\n"
+msgstr "klarte ikkje opna avlusingsfil «%s»: %s\n"
 
 #: lib/dump.c:291
 #, c-format
@@ -952,9 +953,9 @@ msgid "Replacing files in old package %s ...\n"
 msgstr "Byter ut filer i den gamle pakken %s ...\n"
 
 #: src/archives.c:470
-#, fuzzy, c-format
+#, c-format
 msgid "Replaced by files in installed package %s ...\n"
-msgstr "Byter ut filer i den gamle pakken %s ...\n"
+msgstr "Bytta ut med filer i den installerte pakken %s ...\n"
 
 #: src/archives.c:476
 #, c-format
@@ -970,9 +971,9 @@ msgid "trying to overwrite `%.250s', which is also in package %.250s"
 msgstr "prøver å skriva over «%.250s», som òg finst i pakken %.250s"
 
 #: src/archives.c:511
-#, fuzzy, c-format
+#, c-format
 msgid "gobble replaced file `%.255s'"
-msgstr "klarte ikkje lesa delfila «%.250s»"
+msgstr "Las og hoppa forbi fila «%.255s»"
 
 #: src/archives.c:568 dpkg-deb/build.c:314
 #, c-format
@@ -2131,7 +2132,7 @@ msgstr "Debian GNU/Linux «"
 msgid "' package management program version "
 msgstr "» pakkehandteringsprogram, versjon "
 
-#: src/main.c:48 src/query.c:463
+#: src/main.c:48 src/query.c:462
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or\n"
 "later for copying conditions.  There is NO warranty.\n"
@@ -2141,12 +2142,12 @@ msgstr ""
 "nyare for kopieringsvilkår. Det finst INGEN garanti.\n"
 "Sjå "
 
-#: src/main.c:50 src/query.c:465
+#: src/main.c:50 src/query.c:464
 msgid " --licence for copyright and license details.\n"
 msgstr " --licence for informasjon om opphavsrett og lisens.\n"
 
 #: src/main.c:58
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Usage: \n"
 "  dpkg -i|--install      <.deb file name> ... | -R|--recursive <dir> ...\n"
@@ -2220,8 +2221,8 @@ msgstr ""
 "  dpkg --get-selections [<mønster> ...]    send liste over vala til standard-"
 "ut\n"
 "  dpkg --set-selections                    oppgi pakkevala frå standard-inn\n"
-"  dpkg --update-avail <Packages-fil>       byt ut informasjon om "
-"tilgjengelege pakkar\n"
+"  dpkg --update-avail <Packages-fil>       byt ut informasjon om\n"
+"                                           tilgjengelege pakkar\n"
 "  dpkg --merge-avail <Packages-fil>        flett med informasjon frå fil\n"
 "  dpkg --clear-avail                       slett eksisterande "
 "tilgjengeinformasjon\n"
@@ -2237,10 +2238,6 @@ msgstr ""
 "  dpkg -C|--audit                          sjekk for øydelagde pakkar\n"
 "  dpkg --print-architecture                vis målarkitektur\n"
 "                                           (brukar GCC)\n"
-"  dpkg --print-gnu-build-architecture      vis GNU-versjon for\n"
-"                                           målarkitektur\n"
-"  dpkg --print-installation-architecture   vis vertsarkitektur\n"
-"                                           (for installering)\n"
 "  dpkg --compare-versions <a> <udg> <b>    samanlikn versjonsnummer,\n"
 "                                           sjå nedanfor\n"
 "  dpkg --help | --version                  vis denne hjelpa / versjonsnr.\n"
@@ -2276,6 +2273,8 @@ msgstr ""
 "                             eller --debug=help\n"
 "  --status-fd <n>            Send statusendringsoppdateringar til\n"
 "                             fildeskriptor <n>\n"
+"  --log=<filnamn>            Logg statusendringar and handlingar til "
+"<filnamn>\n"
 "  --ignore-depends=<pakke>,...   Ignorer pakkekrav med pakken <pakke>\n"
 "  --force-...                    Tving gjennom operasjon - sjå --force-help\n"
 "  --no-force-...|--refuse-...    Stopp når problem oppstår\n"
@@ -2289,10 +2288,10 @@ msgstr ""
 " < << <= = >= >> >       (berre for kompatibilitet med syntaksen i\n"
 "                         kontrollfila).\n"
 "\n"
-"Bruk «dselect» for ei litt meir brukarvennleg pakkehandtering.\n"
+"Bruk «dselect» eller «aptitude» for ei litt meir brukarvennleg "
+"pakkehandtering.\n"
 
 #: src/main.c:119
-#, fuzzy
 msgid ""
 "Type dpkg --help for help about installing and deinstalling packages [*];\n"
 "Use `dselect' or `aptitude' for user-friendly package management;\n"
@@ -2305,8 +2304,10 @@ msgid ""
 "Options marked [*] produce a lot of output - pipe it through `less' or "
 "`more' !"
 msgstr ""
-"«dpkg --help» viser hjelp om installasjon og avinstallasjon av pakkar [*];\n"
-"Bruk «dselect» for ei litt meir brukarvennleg pakkehandtering;\n"
+"Skriv «dpkg --help» for hjelp om installasjon og avinstallasjon av pakkar "
+"[*];\n"
+"Bruk «dselect» eller «aptitude» for ei litt meir brukarvennleg "
+"pakkehandtering;\n"
 "Skriv «dpkg -Dhelp» for ei liste over avlusingsfunksjonane til dpkg;\n"
 "Skriv «dpkg --force-help» for info om korleis operasjonar kan tvingast "
 "gjennom;\n"
@@ -2317,7 +2318,7 @@ msgstr ""
 "Val markert med [*] gjev mykje tekst - bruk «less» eller «more» for å lesa "
 "informasjonen."
 
-#: src/main.c:184 src/query.c:531 dpkg-deb/main.c:162 dpkg-split/main.c:145
+#: src/main.c:184 src/query.c:530 dpkg-deb/main.c:162 dpkg-split/main.c:145
 #, c-format
 msgid "conflicting actions --%s and --%s"
 msgstr "handlingar i konflikt --%s og --%s"
@@ -2505,7 +2506,7 @@ msgstr "klarte ikkje opna «%i» for straum"
 msgid "unexpected eof before end of line %d"
 msgstr "uventa slutt på fil før slutten av linje %d"
 
-#: src/main.c:541 src/main.c:556 src/query.c:566 dpkg-deb/main.c:184
+#: src/main.c:541 src/main.c:556 src/query.c:565 dpkg-deb/main.c:184
 #: dpkg-split/main.c:157
 msgid "need an action option"
 msgstr "treng eit handlingsval"
@@ -2727,7 +2728,7 @@ msgstr "dpkg-deb: Fjern eventuelle avsluttande nullar"
 msgid "dpkg: warning - unable to delete old file `%.250s': %s\n"
 msgstr "dpkg: Åtvaring - klarte ikkje sletta den gamle fila «%.250s»: %s\n"
 
-#: src/processarc.c:689 src/processarc.c:929 src/remove.c:286
+#: src/processarc.c:689 src/processarc.c:926 src/remove.c:286
 msgid "cannot read info directory"
 msgstr "klarte ikkje lesa infokatalogen"
 
@@ -2778,12 +2779,12 @@ msgstr "dpkg: Åtvaring - pakken %s inneheld ei liste som informasjonsfil"
 msgid "unable to install new info file `%.250s' as `%.250s'"
 msgstr "klarte ikkje installera ny informasjonsfil «%.250s» som «%.250s»"
 
-#: src/processarc.c:909
+#: src/processarc.c:906
 #, c-format
 msgid "(Noting disappearance of %s, which has been completely replaced.)\n"
 msgstr "(Legg merke til at %s er forsvunnen, og fullstendig erstatta.)\n"
 
-#: src/processarc.c:945
+#: src/processarc.c:942
 #, c-format
 msgid "unable to delete disappearing control info file `%.250s'"
 msgstr "klarte ikkje sletta den forsvinnande kontrollinformasjonsfila «%.250s»"
@@ -2812,7 +2813,7 @@ msgstr "Versjon"
 msgid "Description"
 msgstr "Skildring"
 
-#: src/query.c:218 src/query.c:447 src/select.c:80
+#: src/query.c:218 src/query.c:446 src/select.c:80
 #, c-format
 msgid "No packages found matching %s.\n"
 msgstr "Fann ingen pakkar som passar til «%s».\n"
@@ -2885,7 +2886,7 @@ msgstr "omdirigert av %s"
 msgid " to: %s\n"
 msgstr " til: %s\n"
 
-#: src/query.c:398
+#: src/query.c:397
 msgid ""
 "Use dpkg --info (= dpkg-deb --info) to examine archive files,\n"
 "and dpkg --contents (= dpkg-deb --contents) to list their contents.\n"
@@ -2893,21 +2894,21 @@ msgstr ""
 "Bruk dpkg --info (= dpkg-deb --info) for å undersøkja arkivfiler,\n"
 "og dpkg --contents (= dpkg-deb --contents) for å visa innhaldet i dei.\n"
 
-#: src/query.c:459 dpkg-deb/main.c:46
+#: src/query.c:458 dpkg-deb/main.c:46
 msgid "Debian `"
 msgstr "Debian «"
 
-#: src/query.c:461
+#: src/query.c:460
 msgid "' package management program query tool\n"
 msgstr "» pakkehandteringsprogram\n"
 
-#: src/query.c:473
+#: src/query.c:472
 #, c-format
 msgid "Usage: "
 msgstr "Bruk: "
 
-#: src/query.c:474
-#, fuzzy, c-format
+#: src/query.c:473
+#, c-format
 msgid ""
 " [<option>] <command>\n"
 "Commands:\n"
@@ -2947,8 +2948,8 @@ msgstr ""
 "  --licence                           viser lisensvilkåra\n"
 "\n"
 "Alternativ:\n"
-"  --admindir=<katalog>       Bruk <katalog> i staden for %s\n"
-"  --showformat=<format>      Bruk alternativt format for --show\n"
+"  --admindir=<katalog>        Bruk <katalog> i staden for %s\n"
+"  --f|--showformat=<format>   Bruk alternativt format for --show\n"
 "\n"
 "Formatsyntaks:\n"
 "  Eit format er den strengen som vert brukt for å visa ein pakke. Formatet\n"
@@ -2960,7 +2961,7 @@ msgstr ""
 "  ${var[;breidd]}. Felta vil vera høgrejusterte, med mindre breidda er \n"
 "negativ. I så fall vil dei vera venstrejusterte.\n"
 
-#: src/query.c:501
+#: src/query.c:500
 msgid ""
 "Use --help for help about querying packages;\n"
 "Use --licence for copyright licence and lack of warranty (GNU GPL).\n"
@@ -5360,7 +5361,6 @@ msgstr ""
 "Sjå «dpkg-deb --licence» for detaljar.\n"
 
 #: dpkg-deb/main.c:58
-#, fuzzy
 msgid ""
 "Command:\n"
 "  -b|--build <directory> [<deb>]    build an archive.\n"
@@ -5439,8 +5439,8 @@ msgstr ""
 "negativ. I så fall vil dei vera venstrejusterte.\n"
 "\n"
 "Bruk «dpkg» til å installera og fjerna pakkar frå systemet, eller\n"
-"«dselect» for brukarvennleg pakkehandtering. Pakkar som er pakka ut\n"
-"med «dpkg-deb --extract» vil ikkje verta rett installerte.\n"
+"«dselect» eller «aptitude» for brukarvennleg pakkehandtering. Pakkar som er\n"
+"pakka ut med «dpkg-deb --extract» vil ikkje verta rett installerte.\n"
 
 #: dpkg-deb/main.c:100
 msgid ""
@@ -5834,83 +5834,3 @@ msgstr "kjeldefila «%.250s» er inga vanleg fil"
 #: dpkg-split/split.c:70
 msgid "unable to exec mksplit"
 msgstr "klarte ikkje køyra «mksplit»"
-
-#~ msgid "Type md5sum --help for help."
-#~ msgstr "Skriv «md5sum --help» for hjelp."
-
-#~ msgid "error processing %s: %s\n"
-#~ msgstr "feil ved handsaming av %s: %s\n"
-
-#~ msgid ""
-#~ "usage: md5sum [-bv] [-c [file]] | [file...]\n"
-#~ "Generates or checks MD5 Message Digests\n"
-#~ "    -c  check message digests (default is generate)\n"
-#~ "    -v  verbose, print file names when checking\n"
-#~ "    -b  read files in binary mode\n"
-#~ "The input for -c should be the list of message digests and file names\n"
-#~ "that is printed on stdout by this program when it generates digests.\n"
-#~ msgstr ""
-#~ "bruk: md5sum [-bv] [-c [fil]] | [fil...]\n"
-#~ "Genererer eller sjekkar MD5-meldingssamlingar («MD5 Message Digests»)\n"
-#~ "    -c  sjekk meldingssamlingar (standardvalet er å generera)\n"
-#~ "    -v  vis filnamna som vert sjekka\n"
-#~ "    -b  les filer i binær modus\n"
-#~ "Inndata for -c skal vera ei liste med meldingssamlingar og filnamn,\n"
-#~ "som vert skrivne til standard-ut av dette programmet når det\n"
-#~ "genererer samlingar.\n"
-
-#~ msgid "mdfile"
-#~ msgstr "mdfil"
-
-#~ msgid "%s: unrecognized line\n"
-#~ msgstr "%s: kjende ikkje att linja\n"
-
-#~ msgid "%s: can't open %s\n"
-#~ msgstr "%s: klarte ikkje opna %s\n"
-
-#~ msgid "%s: error reading %s\n"
-#~ msgstr "%s: feil ved lesing av %s\n"
-
-#~ msgid "FAILED\n"
-#~ msgstr "MISLUKKAST\n"
-
-#~ msgid "%s: MD5 check failed for '%s'\n"
-#~ msgstr "%s: MD5-sjekken mislukkast for «%s»\n"
-
-#~ msgid "OK\n"
-#~ msgstr "OK\n"
-
-#~ msgid "%s: %d of %d file(s) failed MD5 check\n"
-#~ msgstr "%s: MD5-sjekk av %d av %d fil(er) mislukkast\n"
-
-#~ msgid "%s: no files checked\n"
-#~ msgstr "%s: ingen filer sjekka\n"
-
-#~ msgid ""
-#~ "dpkg: unexpected output from `%s --print-libgcc-file-name':\n"
-#~ " `%s'\n"
-#~ msgstr ""
-#~ "dpkg: Uventa resultat frå «%s --print-libgcc-file-name»:\n"
-#~ " «%s»\n"
-
-#~ msgid "compiler libgcc filename not understood: %.250s"
-#~ msgstr "forstod ikkje libgcc-filnamnet til kompilatoren: %.250s"
-
-#~ msgid "--print-installation-architecture does not take any argument"
-#~ msgstr "--print-installation-architecture tek ingen parametrar"
-
-#~ msgid "failed to fdopen CC pipe"
-#~ msgstr "klarte ikkje utføra «fdopen» på CC-røyr"
-
-#~ msgid "error reading from CC pipe"
-#~ msgstr "feil ved lesing frå CC-røyr"
-
-#~ msgid "empty output"
-#~ msgstr "tomme utdata"
-
-#~ msgid "no newline"
-#~ msgstr "manglar linjeskift"
-
-#~ msgid "dpkg: warning, architecture `%s' not in remapping table\n"
-#~ msgstr ""
-#~ "dpkg: Åtvaring, arkitekturen «%s» finst ikkje i remappingstabellen\n"
