Fix Russian man page for start-stop-daemon-8)

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,8 @@ dpkg (1.13.12~) unstable; urgency=low
     Closes: #330021, #332698, #334063, #335170, #337164, #337307
     Closes: #337948, #338268, #338904, #340674, #342089, #344058
     Closes: #345347, #347225, #348575
+  * Fix Russian man page for start-stop-deamon(8)
+    Closes: #325804
 
  --
 
