--- a/man/ru/start-stop-daemon.8
+++ b/man/ru/start-stop-daemon.8
@@ -204,7 +204,7 @@ start\-stop\-daemon \- запуск и остановка системных программ-демонов
 программ, которым не имеет смысла выполнять fork() самим, или если нет
 возможности добавить в них код для этого.
 .TP
-.BR -n | --nicelevel
+.BR -N | --nicelevel
 Этот флаг перед запуском изменяет приоритет процесса.
 .TP
 .BR -m | --make-pidfile
